# ros2

./: .gitignore  6dof.py  Readme.md  allpoints.py  average_seg.py  ballmove.xml  circle.py  commands  commandslab  dummy  enhancedll_Mohamed.py  finnal.py  hometest-old copy.py  hometest-old.py  hometest.py  install needed  labcmd  motion_cleaned.csv  plot.py  plot_motion_safe.py  reader.py  real_robot.py  run  setup_environment.sh  start.sh  step1.py  tempfile  test2.py  testiing_2.py  testing.py  tree.txt  yash_seg.py
40/: final iteration summary.txt  min cost summary.txt
40/1/: dmp_trajectory_feedback.csv  ee_trajectory.csv  llm_iteration_log.csv  (+2 more)
backups/: hometest.py
data/: motion.csv  motion_safe.csv
install/: local_setup.sh  setup.sh
log/: latest_build
pydmps/: CanonicalSystem.py  __init__.py  cd.py  dmp.py  dmp_discrete.py  dmp_rhythmic.py
src/: tree.txt
src/ur_description/: CMakeLists.txt  package.xml
src/ur_description/config/: initial_positions.yaml  kinematics.yaml  ur_controllers.yaml  ur_table_assembly.srdf
src/ur_description/config/ur5/: default_kinematics_2.yaml  joint_limits.yaml  physical_parameters_old.yaml
src/ur_description/data/: motion.csv
src/ur_description/launch/: cleaning_session.launch.py  view_ur.launch.py
src/ur_description/rviz/: view_robot.rviz
src/ur_description/scripts/: test.py
src/ur_description/urdf/: ur_for_ik.urdf  ur_macro.xacro  ur_mop_standalone.urdf.xacro  ur_table_assembly.urdf.xacro
src/ur_description/urdf/inc/: mop_tool.xacro  ros2_control_mock_hardware.xacro
src/ur_description/urdf/install/: local_setup.sh  setup.sh  setup.zsh
(+48 files in other folders)
